--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -17,11 +17,26 @@
   text-align: center;
   text-decoration: none;
 
-  transition: all 0.15s linear;
+  transition: all 0.08s linear;
+
+  position: relative;
+  top : 0;
+  left: 0;
+
+  -webkit-box-shadow: 4px 4px 0px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    4px 4px 0px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         4px 4px 0px 0px rgba(50, 50, 50, 0.75);
 
   &:hover
   {
     background-color: mix(#fff, #399FD3, 20%);
+    -webkit-box-shadow: 2px 2px 0px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    2px 2px 0px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         2px 2px 0px 0px rgba(50, 50, 50, 0.75);
+
+    position: relative;
+    top : 2px;
+    left: 2px;
   }
 }
 
