--- a/_sass/utils/_helpers.scss
+++ b/_sass/utils/_helpers.scss
@@ -7,3 +7,30 @@
     clear:both;
   }
 }
+
+
+.outline-blue{
+  outline: 1px solid blue;
+}
+
+@mixin bp($class) {
+  @if $class == xs {
+    @media (max-width: 767px) { @content; }
+  }
+
+  @else if $class == sm {
+    @media (min-width: 768px) { @content; }
+  }
+
+  @else if $class == md {
+    @media (min-width: 992px) { @content; }
+  }
+
+  @else if $class == lg {
+    @media (min-width: 1200px) { @content; }
+  }
+
+  @else {
+    @warn "Breakpoint mixin supports: xs, sm, md, lg";
+  }
+}
