--- a/css/screen.scss
+++ b/css/screen.scss
@@ -6,6 +6,8 @@
 @import 'base/typography';
 @import 'base/syntax-highlighting';
 
+
+@import 'layout/grid';
 @import 'layout/styleguide';
 
 @import 'components/buttons';
